<?xml version="1.0" encoding="utf-8"?>
<!-- SPDX-License-Identifier: Apache-2.0 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="touch_game_mode"
        android:title="@string/touch_game_mode_title" />

    <androidx.preference.SeekBarPreference
        android:key="touch_response"
        android:title="@string/touch_response_title"
        android:summary="@string/touch_response_summary"
        android:max="@integer/smoothness_max"
        app:min="0"
        app:showSeekBarValue="true" />

    <androidx.preference.SeekBarPreference
        android:key="touch_sensitivity"
        android:title="@string/touch_sensitivity_title"
        android:summary="@string/touch_sensitivity_summary"
        android:max="@integer/smoothness_max"
        app:min="0"
        app:showSeekBarValue="true" />

    <androidx.preference.SeekBarPreference
        android:key="touch_resistant"
        android:title="@string/touch_resistant_title"
        android:summary="@string/touch_resistant_summary"
        android:max="@integer/smoothness_max"
        app:min="0"
        app:showSeekBarValue="true" />
</PreferenceScreen>
