<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
                   2018-2019 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/display_settings_title">

    <SwitchPreferenceCompat
        android:key="dc_dimming_enable"
        android:defaultValue="false"
        android:title="@string/dc_dimming_enable_title"
        android:summary="@string/dc_dimming_enable_summary" />

    <SwitchPreferenceCompat
        android:key="hbm_mode"
        android:defaultValue="false"
        android:title="@string/hbm_mode_title"
        android:summary="@string/hbm_mode_summary" />

    <SwitchPreferenceCompat
        android:key="auto_hbm"
        android:defaultValue="false"
        android:title="@string/auto_hbm_title"
        android:summary="@string/auto_hbm_summary" />

    <androidx.preference.SeekBarPreference
        android:key="auto_hbm_threshold"
        android:title="@string/auto_hbm_threshold_title"
        android:summary="@string/auto_hbm_threshold_summary"
        android:dependency="auto_hbm"
        android:defaultValue="@integer/auto_hbm_threshold_default"
        android:max="@integer/auto_hbm_threshold_max"
        app:min="@integer/auto_hbm_threshold_min"
        app:seekBarIncrement="@integer/auto_hbm_threshold_step"
        app:showSeekBarValue="true"
        app:updatesContinuously="false" />

    <androidx.preference.SeekBarPreference
        android:key="hbm_disable_time"
        android:title="@string/hbm_disable_time_title"
        android:summary="@string/hbm_disable_time_summary"
        android:dependency="auto_hbm"
        android:defaultValue="@integer/auto_hbm_disable_time_default"
        android:max="@integer/auto_hbm_disable_time_max"
        app:min="@integer/auto_hbm_disable_time_min"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:updatesContinuously="false" />

    <PreferenceCategory
        android:key="saturation_category"
        android:title="@string/saturation_title">

        <com.android.settingslib.widget.LayoutPreference
            android:key="saturation_preview"
            android:layout="@layout/image_preview_layout"
            android:selectable="false" />

        <org.lineageos.settings.CustomSeekBarPreference
            android:key="saturation"
            android:max="200"
            android:min="0"
            android:defaultValue="100"
            app:continuousUpdates="true" />

        <com.android.settingslib.widget.FooterPreference
            android:key="saturation_footer"
            android:title="@string/saturation_footer_summary"
            android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>
